fix horizontal scroll

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+html, body {
+  overflow-x: hidden;
+  max-width: 100vw;
+}
 *, *::before, *::after { box-sizing: border-box; margin: 0; padding: 0; }
 
 :root {
